--- a/TODO
+++ b/TODO
@@ -1,10 +1,15 @@
-==High priority
-
-Stuff to do soon
+Next release
+============
 
 * Steal Ruby-IRC's signal trapping
   * Move main loop inside YAIL so user isn't forced into `loop do; blah; end` just to keep bot alive
+  * Rewrite examples and IRCBot if necessary
 * Allow blocks as well as procs in handlers
+
+High priority
+=============
+
+* Allow secure connections - also steal from Ruby-IRC :P (sorry pope)
 * Maybe rename events from IncomingEvent to IRCServerEvent and OutgoingEvent to IRCClientEvent since
   that actually describes protocol and originator.  Then add CustomEvent for things like :irc_loop.
   * Type also set to :incoming_ and :outgoing_ - change this, too?
@@ -15,7 +20,8 @@ Stuff to do soon
   gives users of the library a whole lot more control.  Default will still be stdout, and logging
   will be set to ERROR on @silent option, INFO with no specific option, and DEBUG on @loud option.
 
-==Version 1.4
+Version 1.4
+===========
 
 API changes:
 ------------
@@ -67,6 +73,17 @@ TODO for this change:
   * Callbacks should be used for things like a bot that does a certain action when his name is
     spoken in a channel, for instance - an actual handling of the event.
   * Filters should be used for back-end tasks, like logging, modifying text, storing stats, etc.
+  * Outgoing events need to be separate in some way because while they can be filtered, the default
+    handling has to remain for them to work!
+  * Redo logger and dumbbot when this is ready
+  * Build example plugin or two so this functionality isn't meaningless!  Speech filtering and
+    command handler system come to mind.
+  * Consider allowing a default of :incoming_xxx on callback, since those are only allowed for
+    incoming events, and even filters so only outgoing filters require explicit :outgoing_xxx
+    * Re-consider functional semantics like "before_say_xxx ..." for :outgoing_xxx filter, etc. -
+      less work for user than "add_before_filter(:outgoing_xxx ..."
+      * Filters: sending_xxx, sent_xxx, hearing_xxx, heard_xxx - not perfect, but somewhat intuitive
+      * Callback is easy: handle_xxx - THERE CAN BE ONLY ONE
 * Allow user to specify some way to decide when to call parent event handler
   * Use cases:
     * User may register :incoming_msg handler and doesn't want to handle ctcp and action
@@ -100,13 +117,15 @@ TODO for this change:
   chain.  Post-event filters would be okay if they were all registered in an optional library the
   user has to explicitly opt for.
 
-==Version 2.0
+Version 2.0
+===========
 
 When ready to change the API in a major way
 
 * Remove prepend_handler completely, remove all legacy code supporting it.
 
-==Low priority
+Low priority
+============
 
 Someday....
 
