--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,4 +6,5 @@
 1.3.5 and prior
 ===============
 
-Go to github, look at the incredibly long and painful old version of CHANGELOG.  Weep.
+Go to github, look at the incredibly long and painful old version of CHANGELOG.  Weep.  Hate
+Nerdmaster for being such a moron.
