--- a/TODO
+++ b/TODO
@@ -1,11 +1,6 @@
 High priority
 =============
 
-* Maybe rename events from IncomingEvent to IRCServerEvent and OutgoingEvent to IRCClientEvent since
-  that actually describes protocol and originator.  Then add CustomEvent for things like :irc_loop.
-  * Type also set to :incoming_ and :outgoing_ - change this, too?
-    * Type is probably okay - backward-compatibility is FAR easier if left alone, and :incoming_xxx
-      can happen with any protocol, especially things like messages, joins, etc.
 
 Version 1.5
 ===========
@@ -39,6 +34,9 @@ possibility, but not sure if I like that for an IRC app.
 TODO for this change:
 ----------------------
 
+(NOTE: some of this stuff can be changed without affecting API - that stuff should be done in
+master without worrying about new branch, version, etc)
+
 * Fix events to give more useful output for :incoming_mode events - at the least, parse out the
   various targets as some kind of hash.  Very complex mode-parsing may be necessary.
   This is one place where API consistency (using .text and such) is less important than usability.
@@ -49,6 +47,7 @@ TODO for this change:
     * User is setting channel key to "foo"
     * User is setting "-m" on #bots
     * User is taking away Towelie's voice (-v)
+* Make subclass of BaseEvent for custom events - simple accessor for type and maybe a data hash
 * Make events more like a plugin kind of system.
   * Each event can have pre-callback and post-callback filters.
     * These would include internal things like the handling of changing bot's nick.
@@ -62,6 +61,12 @@ TODO for this change:
   * Filters should be used for back-end tasks, like logging, modifying text, storing stats, etc.
   * Outgoing events need to be separate in some way because while they can be filtered, the default
     handling has to remain for them to work!
+    * Make a better OutgoingEvent system - they aren't events, they're commands, and they can't be
+      "handled".  We can have filters before they're sent, but technically the handler is internal
+      and should not be bypassed.
+      * Create a new object for all commands in the output api - output function creates object
+        with raw data, but our internal handler spits out raw data to socket.  User can
+        filter or even cancel the event from happening, but cannot set up their own handler.
   * Redo logger and dumbbot when this is ready
   * Build example plugin or two so this functionality isn't meaningless!  Speech filtering, ignore
     (by hostmask regex or nick or whatever), command handler system (register commands, user enters
@@ -71,7 +76,11 @@ TODO for this change:
     * Re-consider functional semantics like "before_say_xxx ..." for :outgoing_xxx filter, etc. -
       less work for user than "add_before_filter(:outgoing_xxx ..."
       * Filters: sending_xxx, sent_xxx, hearing_xxx, heard_xxx - not perfect, but somewhat intuitive
-      * Callback is easy: handle_xxx - THERE CAN BE ONLY ONE
+      * Callback is easy: handle_xxx - THERE CAN BE ONLY ONE, and only for incoming events!
+      * Handling custom events would be manual:
+        * before_filter(:some_event_type, code)
+        * set_handler(:some_event_type) {|event| do_stuff(event);}
+        * after_filter(:some_event_type, code)
 * Allow user to specify some way to decide when to call parent event handler
   * Use cases:
     * User may register :incoming_msg handler and doesn't want to handle ctcp and action
@@ -95,12 +104,6 @@ TODO for this change:
           end
           dispatch(event.child);
         end
-* Build an event object for outgoing event handlers.  This may not
-  ever really be necessary, as outgoing events have very specific arguments
-  and the handling of events isn't nearly as commonplace as handling incoming
-  events.
-  * Needs to be done anyway - deprecating the arg-passing system requires that *all* events have
-    some object behind them.
 * Reporting should be an optional plugin *at most*.  Not required, and not part of the normal event
   chain.  Post-event filters would be okay if they were all registered in an optional library the
   user has to explicitly opt for.
